fix(client): wrap into background-box

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -20,10 +20,16 @@ body {
     font-size: 14px;
 }
 
-.container {
+.container, #backgroundBox {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#backgroundBox {
+    height: 100%;
+    background-color: white;
+    box-shadow: 0px 5px 20px 0px rgba(4, 15, 27, 0.07);
 }
 
 #zoom-ds-frame
